Update for Student and Login Pages

--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
                 <div class="card shadow-lg o-hidden border-0 my-5">
                     <div class="card-body p-0">
                         <div class="row">
-                            <div class="col-lg-6 offset-xl-0 d-none d-lg-flex"></div>
+                            <div class="col-lg-6 offset-xl-0 d-none d-lg-flex"><img src="assets/img/Gateway_Visitors_SQ.jpg" style="width: 452px;"></div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
